# webtrees-datencheck-plugin

./: .gitignore  README.md  build_release.ps1  composer.json  module.php
datencheck_cli/: Cargo.toml  test.ged
datencheck_cli/src/: main.rs
docs/: NEXT_SESSION.md  changelog.md  ideen.txt  plan.md  roadmap.md
resources/css/: module.css
resources/lang/: bg.php  bs.php  ca.php  cs.php  cy.php  da.php  de.php  el.php  en-AU.php  en-GB.php  en-US.php  en.php  es.php  et.php  eu.php  fa.php  fi.php  fr-CA.php  fr.php  gl.php  hr.php  hu.php  hy.php  id.php  is.php  it.php  ja.php  ka.php  kk.php  ko.php  lt.php  lv.php  ms.php  nb.php  nl.php  no.php  pl.php  pt-BR.php  pt.php  ro.php  (+10 more)
resources/views/modules/datencheck/: admin.phtml  admin_ignored.phtml  interaction.phtml
src/Helpers/: DateParser.php  NameHelper.php  PhoneticHelper.php  StringHelper.php
src/Services/: ActionService.php  DatabaseService.php  IgnoredErrorService.php  InteractionService.php  SchemaService.php  TaskService.php  ValidationConstants.php  ValidationService.php
src/Services/Validators/: AbstractValidator.php  BiologicalValidator.php  TemporalValidator.php
