[package]
name = "datencheck_cli"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ged_io = "0.2.1"
mysql = { version = "27.0.0", default-features = false, features = ["derive", "minimal-rust"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
rphonetic = "3.0.6"
regex = "1.11"
